# ThemeForge

./: .gitignore  CONTRIBUTING.md  README.md  paper.bib  paper.md  pyproject.toml  themeforge_gui.py
docs/: public_education_datasets.md
release_notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v1.0.0.md
scripts/: build_windows_portable.ps1
tests/: test_analysis.py  test_cli.py  test_io.py  test_release_metadata.py  test_ui_model.py
themeforge/: __init__.py  analysis.py  app.py  cli.py  exports.py  io.py  ui_model.py
