[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "themeforge"
version = "1.0.0"
description = "Windows-friendly qualitative thematic coding and quote evidence tool"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ThemeForge contributors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.scripts]
themeforge = "themeforge.cli:main"
themeforge-gui = "themeforge.app:main"

[tool.setuptools.packages.find]
include = ["themeforge*"]
